# HOL

./: .cvsignore  .gitattributes  .gitignore  .travis.yml  CLAUDE.md  CONTRIBUTORS  COPYRIGHT  INSTALL  README  README.md  cleanall  commit_msg_diskthm.txt  holproject.toml  implementation_plan.md  install.txt  merging  run-selftest.sh  std.prelude
Manual/: .gitignore  Holmakefile  Makefile  READ-ME  README  cheatsheet.md  manuals.txt  mdbook.mk  pdf-macros.lua
copyrights/: sml-toml
developers/: .gitignore  Dockerfile  Holmakefile  README  TAGS-policy  ThyDebug.ML  bench-arith-cache.sml  build-examples  comparelogs.mlb  comparelogs.sml  core-emacs-mode.sml  datfile-format.md  delete-trailing-ws  deleted-in-release.txt  emacs-mode-fix  find-logdups  find-nonascii  find-stale-theories  forTeX.pl  fuzz_holmake.py  gen-text-release-notes  genUseScript.sml  generateBuildSummary.sml  git-regression-build.sh  install-poly.sh  mlsysinfo.sml  mosml-comparelogs.sml  mosmlTextIO.sml  mosmlgbs.sml  mosmlsysinfo.sml  otbuild.sh  otint.sh  perf-regression.sh  poly-comparelogs.ML  poly-gbs.ML  poly-prehol.sml  polysysinfo.sml  prehol.sml  prettifier.pl  pull-webpages  (+9 more)
doc/: VersionHistory  faq  faq.html  faq.tmpl  kananaskis-1.release  kananaskis-1.release.html  kananaskis-10.release.md  kananaskis-11.release.md  kananaskis-13.release.md  kananaskis-14.release.md  kananaskis-2.release  kananaskis-3.release.html  kananaskis-4.release.html  kananaskis-5.release.html  kananaskis-6.release.html  kananaskis-7.release.html  kananaskis-8.release.html  kananaskis-9.release.html  next-release.md  taupo-1.release  taupo-2.release  taupo-3.release  taupo-4.release  trindemossen-2.release.md
examples/: PropLogic  README  Thery  Thery.sml  autopilot.sml  dpll.sml  euclid.sml  fol.sml  hol_dpllScript.sml  pattern_match_demoScript.sml  ring.sml  root2.sml  sha-1  taut.sml  tempScript.sml
help/: .cvsignore  .gitignore  HOLdbase  template
hol_parser/: readme.txt
release-notes/: kananaskis-12.release.md  kananaskis-14.release.md  kananaskis-2.release.html  kananaskis-3.release.html  kananaskis-4.release.html  kananaskis-6.release.html  kananaskis-7.release.html  next-release.md  trindemossen-1.release.md
scheme/: 0Records.scm  Feedback.scm  Globals.scm  KernelTypes.scm  Lexis.scm  Lib.scm  PreKernelRecords.scm  README  Sig.scm  Subst.scm  Term.scm  Type.scm  locn.scm  ml.scm  ml2scm.scm  mlsig.scm  records.scm
sigobj/: .cvsignore  README
tools-poly/: README  README.md  build-sequence  build.sml  builder.ML  builder0.ML  buildheap.ML  configure.sml  documentation-directories  execompile.ML  ffi-example.ML  genbuild.ML  heapname.ML  hol-mode.src  hol.ML  hol.bare.noquote.ML  hol.noquote.ML  holide.ML  holinteractive.ML  holrepl.ML  lsp-server.ML  make_iss.sml  makefile.muddy.src  poly-build.ML  poly-wrapper  polymlc.ML  prelude.ML  prelude2.ML  rebuild-excludes.txt  smart-configure.sml  win-config.sml
tools-smlnj/: configure-smlnj.sml  configure.sml  smart-configure.sml
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/bindings/c/: tree-sitter-holscript.h  tree-sitter-holscript.pc.in
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/bindings/go/: binding.go  binding_test.go
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/bindings/node/: binding.cc
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/bindings/python/tests/: test_binding.py
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/bindings/python/tree_sitter_holscript/: __init__.py  binding.c
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/bindings/rust/: build.rs  lib.rs
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/bindings/swift/TreeSitterHolscriptTests/: TreeSitterHolscriptTests.swift
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/src/: scanner.c
tools/editor-modes/emacs/tree-sitter/tree-sitter-holscript/test/corpus/: datatype.txt  definition.txt  quote.txt  term.txt  theorem.txt  type.txt
(+18716 files in other folders)
